# modpack-creator

./: .gitignore  README.md  modpack-creator.py  pyproject.toml  requirements.txt  setup.py
ModpackCreator/: ATask.py  __init__.py  run.py
ModpackCreator/BuiltInTasks/BuildCurseforgePackFromExport/: FilesFunctions.py  task.py
ModpackCreator/BuiltInTasks/BuildMMCPackFromExport/: FilesFunctions.py  task.py
ModpackCreator/BuiltInTasks/CurseForgeToMultiMC/: FilesFunctions.py  task.py
ModpackCreator/SetupVarTypes/: PathVar.py
modpack-creator/: __init__.py
old/: LICENSE  pyproject.toml
old/ModpackCreator/: ATask.py  __init__.py  run.py
old/ModpackCreator/BuiltInTasks/BuildMMCPackFromExport/: FilesFunctions.py  task.py
old/ModpackCreator/BuiltInTasks/BuildPackwizPackFromExport/: task.py
old/ModpackCreator/BuiltInTasks/CurseForgeToMultiMC/: task.py
old/ModpackCreator/InputVarTypes/: PathVar.py
old/scripts/: change-version.py
